Correção de detalhes no Guia